[tool.poetry]
name = "consume-later-py"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "consume_later_py"}]

[tool.poetry.dependencies]
python = "3.10.10"
fastapi = {extras = ["all"], version = "^0.95.2"}
pydantic = "^1.10.8"
ibis-framework = {extras = ["sqlite"], version = "^5.1.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
